# upower

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  COPYING  HACKING  HACKING.md  Makefile.am  NEWS  README  README.md  RELEASE  autogen.sh  configure.ac  configure.in  devicekit-power-gobject.pc.in  devkit-power-gobject.pc.in  devkit-power.pc.in  meson.build  meson_options.txt  upower-glib.pc.in
.ci/: fail_skipped_tests.py  upower.suppr
contrib/: codespell.cfg  setup
data/zsh-completion/: _upower  meson.build
dbus/: meson.build  org.freedesktop.UPower.Device.xml  org.freedesktop.UPower.KbdBacklight.xml  org.freedesktop.UPower.xml
devkit-power-gobject/: .gitignore  Makefile.am  devicekit-power.h  dkp-backlight.c  dkp-backlight.h  dkp-client.c  dkp-client.h  dkp-device.c  dkp-device.h  dkp-enum.c  dkp-enum.h  dkp-history-obj.c  dkp-history-obj.h  dkp-qos-obj.h  dkp-stats-obj.h  dkp-version.h.in  dkp-wakeups-obj.h  dkp-wakeups.c  dkp-wakeups.h  up-client.h  up-device.h  up-enum.h  up-history-obj.h  up-qos-obj.h  up-stats-obj.h  up-wakeups-obj.h  up-wakeups.h
doc/: .gitignore  Makefile.am  TODO  clean.sh  devkit-power-docs.xml  meson.build  upower-docs.xml
doc/dbus/: Makefile.am
doc/man/: DeviceKit-power.xml  Makefile.am  devkit-power-daemon.xml  devkit-power.xml  meson.build  upower.xml
doc/website/: common.css  index.htm
etc/: UPower.conf  meson.build
libdevkit-power/: Makefile.am  dkp-client-device.c  dkp-client-device.h  dkp-client.c  dkp-client.h  dkp-debug.c  dkp-device.c  dkp-device.h  dkp-enum.c  dkp-enum.h  dkp-history-obj.c  dkp-history-obj.h  dkp-object.c  dkp-object.h  dkp-qos-obj.c  dkp-qos-obj.h  dkp-stats-obj.c  dkp-stats-obj.h  dkp-wakeups-obj.c  dkp-wakeups-obj.h  dkp-wakeups.c  dkp-wakeups.h  egg-obj-list.c  egg-obj-list.h
libupower-glib/: .gitignore  Makefile.am  meson.build  up-autocleanups.h  up-client.c  up-client.h  up-device.c  up-device.h  up-history-item.c  up-history-item.h  up-qos-item.c  up-qos-item.h  up-stats-item.c  up-stats-item.h  up-types.c  up-types.h  up-version.h.in  up-wakeup-item.c  up-wakeup-item.h  up-wakeups.c  up-wakeups.h  upower.h
po/: .gitignore  LINGUAS  POTFILES.in  fr.po  it.po  ka.po  pl.po  sv.po
policy/: .gitignore  Makefile.am  meson.build  org.freedesktop.devicekit.power.policy.in  org.freedesktop.devicekit.power.qos.policy.in  org.freedesktop.upower.policy.in  org.freedesktop.upower.qos.policy.in
rules/: 60-upower-battery.hwdb  60-upower-battery.rules  95-devkit-power-battery-recall-ibm.rules  95-devkit-power-battery-recall-toshiba.rules  95-devkit-power-hid.rules  95-upower-csr.rules  95-upower-hid.rules  95-upower-hidpp.rules  Makefile.am  meson.build
src/: .gitignore  95-devkit-power-csr.rules  95-devkit-power-hid.rules  95-devkit-power-wup.rules  95-devkit-power.rules  Makefile.am  devkit-power-daemon.c  devkit-power-daemon.h  devkit-power-enum.c  devkit-power-enum.h  devkit-power-source.c  devkit-power-source.h  dkp-backend.h  dkp-backlight.c  dkp-backlight.h  dkp-csr.c  dkp-csr.h  dkp-daemon.c  dkp-daemon.h  dkp-debug.h  dkp-device-csr.c  dkp-device-hid.c  dkp-device-list.c  dkp-device-list.h  dkp-device-supply.c  dkp-device-wup.c  dkp-device.c  dkp-device.h  dkp-enum.c  dkp-enum.h  dkp-hid.c  dkp-hid.h  dkp-history-obj.c  dkp-history-obj.h  dkp-history.c  dkp-history.h  dkp-input.c  dkp-input.h  dkp-main.c  dkp-marshal.list  (+68 more)
src/bsd/: Makefile.am  meson.build  up-backend-common.c
src/dummy/: .gitignore  Makefile.am  dkp-backend.c  dkp-native.c  meson.build  up-backend.c  up-native.c
src/freebsd/: Makefile.am  dkp-acpi-native.c  dkp-backend-acpi.h  dkp-backend.c  dkp-devd.c  dkp-devd.h  dkp-device-supply.c  dkp-device-supply.h  dkp-native.c  dkp-util.c  dkp-util.h  meson.build  up-acpi-native.c  up-acpi-native.h  up-acpi-native.vala  up-backend-acpi.h  up-backend.c  up-devd.c  up-devd.h  up-device-supply.c  up-device-supply.h  up-native.c  up-util.c  up-util.h
src/linux/: .gitignore  Makefile.am  README.debugging  dkp-backend.c  dkp-device-csr.c  dkp-device-csr.h  dkp-device-hid.c  dkp-device-hid.h  dkp-device-supply.c  dkp-device-wup.c  dkp-device-wup.h  dkp-input.c  dkp-input.h  dkp-native.c  hidpp-device.c  hidpp-device.h  integration-test  integration-test.py  meson.build  output_checker.py  sysfs-utils.c  sysfs-utils.h  up-backend.c  up-device-bluez.c  up-device-bluez.h  up-device-csr.c  up-device-csr.h  up-device-hid.c  up-device-hid.h  up-device-idevice.c  up-device-idevice.h  up-device-lg-unifying.c  up-device-supply-battery.c  up-device-supply-battery.h  up-device-supply.c  up-device-supply.h  up-device-unifying.c  up-device-wup.c  up-device-wup.h  up-dock.c  (+10 more)
src/linux/tests/: wacom-bluetooth-active.device  wacom-dongle-active.device  wacom-dongle-waiting.device
src/openbsd/: Makefile.am  meson.build  up-apm-native.h  up-backend.c  up-native.c
tools/: .gitignore  Makefile.am  devkit-power.c  dkp-battery-power.c  dkp-client-device.c  dkp-client.c  dkp-tool.c  meson.build  up-tool.c
